@@ -1,6 +1,6 @@
 plugins {
     alias(libs.plugins.android.application)
-    id("androidx.navigation.safeargs")
+    alias(libs.plugins.navigation.safeargs)
 }
 
 android {
@@ -9,12 +9,12 @@ android {
 
     defaultConfig {
         applicationId = "com.ibrahimekinci.barcrowd"
-        minSdk = 36
+        minSdk = 31
         targetSdk = 36
         versionCode = 1
         versionName = "1.0"
 
-        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner = "com.ibrahimekinci.barcrowd.CustomTestRunner"
     }
 
     buildTypes {
@@ -27,30 +27,62 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_11
-        targetCompatibility = JavaVersion.VERSION_11
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
+    }
+
+    testOptions {
+        unitTests.all {
+            // 'it' refers to the test task
+            it.jvmArgs("-XX:+EnableDynamicAgentLoading")
+        }
     }
 }
 
 dependencies {
-
+    // Core UI
     implementation(libs.appcompat)
     implementation(libs.material)
     implementation(libs.activity)
     implementation(libs.constraintlayout)
-    testImplementation(libs.junit)
-    androidTestImplementation(libs.ext.junit)
-    androidTestImplementation(libs.espresso.core)
+    implementation(libs.recyclerview)
+    implementation(libs.core)
 
     // Jetpack MVVM and Lifecycle
     implementation(libs.lifecycle.livedata)
     implementation(libs.lifecycle.viewmodel)
 
-    // Jetpack Navigation and Safe Args
+    // Jetpack Navigation
     implementation(libs.navigation.fragment)
     implementation(libs.navigation.ui)
 
-    // Jetpack Room Database
+    // Jetpack Room
     implementation(libs.room.runtime)
-    annotationProcessor(libs.room.compiler) // Annotation processor for code generation
+    annotationProcessor(libs.room.compiler)
+
+    // Firebase
+    implementation(platform(libs.firebase.bom))
+    implementation(libs.firebase.auth)
+    implementation(libs.firebase.firestore)
+    implementation(libs.firebase.storage)
+
+    // CameraX
+    implementation(libs.camerax.camera2)
+    implementation(libs.camerax.lifecycle)
+    implementation(libs.camerax.view)
+
+    // WorkManager
+    implementation(libs.work.runtime)
+
+    // Testing
+    testImplementation(libs.junit)
+    testImplementation(libs.mockito.core)
+    testImplementation(libs.robolectric.v416)
+    testImplementation(libs.androidx.core.testing)
+
+    androidTestImplementation(libs.ext.junit)
+    androidTestImplementation(libs.espresso.core)
+    androidTestImplementation(libs.mockito.android)
+    androidTestImplementation(libs.androidx.core.testing)
+
 }
